ingress/jenkins-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-svc
  namespace: ingress
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
