ingress/minio-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: minio-svc
  namespace: ingress
spec:
  type: ExternalName
  externalName: minio.minio.svc.cluster.local
