ingress/teamcity-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: teamcity-svc
  namespace: ingress
spec:
  type: ExternalName
  externalName: teamcity.teamcity.svc.cluster.local
